# Artemis

./: README.md  pyproject.toml
docker/: Dockerfile
openclaw-rewrite/: README.md  pyproject.toml
openclaw-rewrite/docker/: Dockerfile
openclaw-rewrite/src/protocol/: __init__.py
openclaw-rewrite/tests/: __init__.py
src/: __init__.py
src/channels/: __init__.py
src/gateway/: __init__.py
tests/unit/: test_placeholder.py
